# automac-mcp

./: README.md  automac_mcp.py  pyproject.toml  test_mcp_server.py
.claude/: CLAUDE.md
